[workspace]
resolver = "2"
members = [
    "c01_hello_world",
    "c02_guessing_game",
    "c03_common",
    "c04_ownership",
    "c05_structs",
    "c06_enums",
    "c07_module_system",
    "c08_collections",
    "c09_error_handling",
    "c10_generics_traits_lifetimes",
    "c11_automated_tests",
    "c12_minigrep",
]
default-members = ["c12_minigrep"]
