[workspace]
# Version of the resolver algorithm
resolver = "2"
# Packages in the workspace
members = [
    "c01_hello_world",
    "c02_guessing_game",
    "c03_common",
    "c04_ownership",
    "c05_structs",
    "c06_enums",
    "c07_module_system",
    "c08_collections",
    "c09_error_handling",
    "c10_generics_traits_lifetimes",
    "c11_automated_tests",
    "c12_minigrep",
    "c13_iterators_closures",
    "c14_cargo_crates",
    "c15_smart_pointers",
    "c16_concurrency",
    "c17_asynchronous_programming",
    "c18_object_oriented_programming",
    "c19_patterns_matching",
    "c20_advanced_features",
]
default-members = ["c20_advanced_features"]
